--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
     .logos-powered_by_diaspora
     %ul#footer_nav
       = render :partial =>'shared/links'
-      
+
 :javascript
   var _paq = _paq || [];
 
@@ -11,7 +11,7 @@
   _paq.push(["enableLinkTracking"]);
 
   (function() {
-      var u="https://framasphere.org/piwik/";
+      var u="https://stats.framasoft.org/";
       _paq.push(["setTrackerUrl", u+"piwik.php"]);
       _paq.push(["setSiteId", "26"]);
       var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
