--- a/app/views/home/_show.html.erb
+++ b/app/views/home/_show.html.erb
@@ -59,7 +59,7 @@ p[role="presentation"] i.glyphicon {
 <script type="text/javascript">
 var script = document.createElement('script');
     script.type = "text/javascript";
-    script.src="https://n6.framasoft.org/nav/nav.js";
+    script.src="https://framasoft.org/nav/nav.js";
     document.getElementsByTagName('head')[0].appendChild(script);
 
     jQuery(document).ready(function() {
