Email support inscription

--- a/app/views/home/_show.html.erb
+++ b/app/views/home/_show.html.erb
@@ -92,7 +92,7 @@ var script = document.createElement('script');
             </div>
             <div class="col-md-6 text-center">
                 <a href="/users/sign_up" class="btn btn-success btn-lg" aria-describeby="inscription-email"><i class="glyphicon glyphicon-user"></i> Créer un compte »</a>
-                <p id="inscription-email" class="alert text-left">Si vous rencontrez des difficultés pour vous inscrire, notamment à cause du captcha, envoyez un email à inscription-framasphere@framalistes.org contenant l’identifiant que vous souhaitez utiliser.</p>
+                <p id="inscription-email" class="alert text-left">Si vous rencontrez des difficultés pour vous inscrire, notamment à cause du captcha, envoyez un email à rt+framasphere@framasoft.org contenant l’identifiant que vous souhaitez utiliser.</p>
             </div>
         </div>
         <div class="col-md-4">
